--- a/CrmPackage1/CrmPackage1/WebResources/CSS/jquery-ui.css
+++ b/CrmPackage1/CrmPackage1/WebResources/CSS/jquery-ui.css
@@ -1086,7 +1086,10 @@ body .ui-tooltip {
 .ui-icon-comment { background-position: -128px -96px; }
 .ui-icon-person { background-position: -144px -96px; }
 .ui-icon-print { background-position: -160px -96px; }
-.ui-icon-trash { background-position: -176px -96px; }
+.ui-icon-trash { 
+    /*background-position: -176px -96px;*/ 
+
+}
 .ui-icon-locked { background-position: -192px -96px; }
 .ui-icon-unlocked { background-position: -208px -96px; }
 .ui-icon-bookmark { background-position: -224px -96px; }
