--- a/CrmPackage1/CrmPackage1/WebResources/CSS/NoteManager.css
+++ b/CrmPackage1/CrmPackage1/WebResources/CSS/NoteManager.css
@@ -3,31 +3,35 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
 }
-.upload-container h2 {
- color:#333;
- font-size:14px;
- font-weight:700;
- margin:0;
- padding:0;
-} 
+
+    .upload-container h2 {
+        color: #333;
+        font-size: 14px;
+        font-weight: 700;
+        margin: 0;
+        padding: 0;
+        height: 5px;
+    }
 
 .watermark {
-    position: absolute;
     opacity: 0.1;
+    /*position: absolute;
     font-size: 3em;
     width: 100%;
     text-align: center;
-    z-index: 1000;
+    z-index: 1000;*/
 }
+
 .links {
-    cursor:pointer;
+    cursor: pointer;
     color: #1160b7 !important;
 }
-    .upload-container p {
-        color: #777;
-        margin: 0;
-        padding: 5px 0;
-    }
+
+.upload-container p {
+    color: #777;
+    margin: 0;
+    padding: 5px 0;
+}
 
 .ui-widget-content .jqgrow .ui-row-ltr {
     color: #333;
@@ -45,14 +49,13 @@
 .file-upload {
     /*border:1px solid #a4c6fd;*/
     background: #ffffff;
-   
 }
 
     .file-upload input {
         margin: 10px;
         padding: 5px;
         width: 560px;
-         font-size:11px;
+        font-size: 11px;
     }
 
 .transparent {
@@ -82,8 +85,9 @@
     margin: 10px 0 0;
     bottom: 0;
     width: 100%;
-    height: 30px;
-    padding: 10px 0;font-size: 11px;
+    height: 20px;
+    padding: 10px 0;
+    font-size: 11px;
 }
 
 .attach-btn {
@@ -100,13 +104,18 @@
 }
 
 .submit-btn {
-    background: #fff;
+    background: #FDFDFD;
     border: 1px solid #c6c6c6;
     text-align: center;
-    margin-top: 5px;
+    margin-top: 2px;
     float: right;
     margin-right: 10px;
     cursor: pointer;
+    border-radius: 0!important;
+    text-decoration: none;
+    min-width: 60px;
+    height: 20px;
+    width: auto;
 }
 
 .yj-balloon-arrow-border {
@@ -122,9 +131,11 @@
     position: absolute;
     width: 0;
 }
+
 .fileuploadelement {
     font-size: 11px;
 }
+
 .ui-jqgrid tr.ui-row-ltr td {
     border-bottom-style: none;
     border-right-style: none;
@@ -138,13 +149,20 @@
     .ui-state-highlight input:focus {
         border: 1px solid #a4c6fd;
     }
+
 .ui-widget-header {
-    background:white;
-    color:black;
+    background: white;
+    color: black;
 }
-.ui-jqgrid { border-width: 0px; }
-.ui-state-default { border-width: 0px;
+
+.ui-jqgrid {
+    border-width: 0px;
 }
+
+.ui-state-default {
+    border-width: 0px;
+}
+
 .deleteicon {
     background-image: url(../img/delete.png);
 }
