--- a/CrmPackage1/CrmPackage1/WebResources/CSS/NoteManager.css
+++ b/CrmPackage1/CrmPackage1/WebResources/CSS/NoteManager.css
@@ -1,6 +1,15 @@
-﻿.upload-container {
-    width: 590px;
-    font-family: Arial, Helvetica, sans-serif;
+﻿
+body {
+    font-family:Segoe UI, Tahoma, Arial;
+}
+.upload-container {
+    width: 60%;
+    /*font-family: Arial, Helvetica, sans-serif;*/
+    font-size: 12px;
+}
+.upload-container2 {
+    width: 40%;
+    /*font-family: Arial, Helvetica, sans-serif;*/
     font-size: 12px;
 }
 
@@ -27,10 +36,26 @@
     color: #1160b7 !important;
 }
 
-.upload-container p {
-    color: #777;
+.filelink {
+    vertical-align: top;
+    color: #000000;
     margin: 0;
     padding: 5px 0;
+    font-size: 11px;
+    font-weight: normal;
+}
+
+.attachments:hover {
+    background-color: #d7ebf9;
+    cursor: pointer;
+}
+
+.upload-container p {
+    color: #000000;
+    margin: 0;
+    padding: 5px 0;
+    font-size: 12px;
+    font-weight: normal;
 }
 
 .ui-widget-content .jqgrow .ui-row-ltr {
@@ -54,7 +79,7 @@
     .file-upload input {
         margin: 10px;
         padding: 5px;
-        width: 560px;
+        width: 100%;
         font-size: 11px;
     }
 
@@ -103,6 +128,11 @@
     padding: 0 10px;
 }
 
+.submit-btn:hover {
+    background-color: #d7ebf9;
+    cursor: pointer;
+}
+
 .submit-btn {
     background: #FDFDFD;
     border: 1px solid #c6c6c6;
@@ -116,6 +146,7 @@
     min-width: 60px;
     height: 20px;
     width: auto;
+    font-size: 11px;
 }
 
 .yj-balloon-arrow-border {
