--- a/CrmPackage1/CrmPackage1/WebResources/CSS/redmondTheme.css
+++ b/CrmPackage1/CrmPackage1/WebResources/CSS/redmondTheme.css
@@ -269,7 +269,8 @@
 }
 .ui-state-highlight .ui-icon
 {
-    background-image: url(../img/ui_icons_2e83ff_256x240.png);
+    /*background-image: url(../img/ui_icons_2e83ff_256x240.png);*/
+    background-image: url(../img/delete.png);
 }
 .ui-state-error .ui-icon, .ui-state-error-text .ui-icon
 {
