--- a/CrmPackage1/CrmPackage1/WebResources/CSS/jquery-ui.css
+++ b/CrmPackage1/CrmPackage1/WebResources/CSS/jquery-ui.css
@@ -983,10 +983,11 @@ body .ui-tooltip {
      background-image: url(../img/delete.png);
 }
 .ui-widget-header .ui-icon {
-	background-image: url("images/ui-icons_444444_256x240.png");
+	/*background-image: url("images/ui-icons_444444_256x240.png");*/
+    background-image: url(../img/delete.png);
 }
 .ui-state-default .ui-icon {
-	background-image: url("images/ui-icons_777777_256x240.png");
+	/*background-image: url("images/ui-icons_777777_256x240.png");*/
 }
 .ui-state-hover .ui-icon,
 .ui-state-focus .ui-icon {
