--- a/CrmPackage1/CrmPackage1/WebResources/CSS/NoteManager.css
+++ b/CrmPackage1/CrmPackage1/WebResources/CSS/NoteManager.css
@@ -88,7 +88,7 @@ body {
         font-size: 11px;
         line-height: 2em;
         margin: 0;
-        margin-left:0px 0px 2% 2%;
+        margin:0px 0px 2% 2%;
         padding: 5px;
         width: 100%;
         font-family: Segoe UI, Tahoma, Arial;
